--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,11 @@
 			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>io.swagger</groupId>
+			<artifactId>swagger-jersey2-jaxrs</artifactId>
+			<version>1.5.0</version>
+		</dependency>
 
 	</dependencies>
 
@@ -50,6 +55,22 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
-		</plugins>
+			<plugin>
+				<groupId>com.webcohesion.enunciate</groupId>
+				<artifactId>enunciate-maven-plugin</artifactId>
+				<version>2.11.1</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>docs</goal>
+						</goals>
+						<configuration>
+							<configFile>enunciate.xml</configFile>
+							<docsDir>${project.build.directory}</docsDir>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins> 
 	</build>
 </project>
