--- a/pom.xml
+++ b/pom.xml
@@ -29,10 +29,9 @@
 		</dependency>
 		<dependency>
 			<groupId>io.swagger</groupId>
-			<artifactId>swagger-jersey2-jaxrs</artifactId>
+			<artifactId>swagger-jaxrs</artifactId>
 			<version>1.5.0</version>
 		</dependency>
-
 	</dependencies>
 
 	<build>
@@ -55,22 +54,6 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
-			<plugin>
-				<groupId>com.webcohesion.enunciate</groupId>
-				<artifactId>enunciate-maven-plugin</artifactId>
-				<version>2.11.1</version>
-				<executions>
-					<execution>
-						<goals>
-							<goal>docs</goal>
-						</goals>
-						<configuration>
-							<configFile>enunciate.xml</configFile>
-							<docsDir>${project.build.directory}</docsDir>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins> 
+		</plugins>
 	</build>
 </project>
